test/code/test_shutdown_error.out
goodbye!

Fatal error: whoops! in {{CWD}}/test/code/test_shutdown_error.php on line 5
